chore: clear the open SonarCloud issues
Sweeps the 32 issues SonarCloud reports on main. Almost all are cosmetic, with
three that are not:

- ScaledImage carries a byte[], so the record's generated equals/hashCode
  compared array identity; they now compare contents (S6218).
- ArtistTagParser's two patterns started with a repeated whitespace class, which
  the engine re-entered at every offset of a long run; a lookbehind pins each run
  to its first character (S8786).
- SegmentGrid's `!(end > 0)` was written that way to catch NaN, which `end <= 0`
  does not; the NaN case is now spelled out rather than implied.

The rest: Math.clamp, UnaryOperator, unnamed catch parameters, conditionals
moved inside the operation they feed, patterns hoisted out of loops, duplicated
literals extracted, two dangling javadocs re-attached to the method they
describe, and a break/continue-heavy loop straightened out.

In the tests: the GraphQlTester chains in PlaybackHistoryControllerGraphQlTest
are wrapped in assertDoesNotThrow like every other *GraphQlTest, the comic scan
integration test's assertions are split over three named verify methods, and
three concatenated playlist fixtures become text blocks.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GK3AyM7B8AqQnUQr4HLRc5